--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -1,1 +1,5 @@
 body { padding-top: 60px; }
+.navbar .brand { padding: 0; }
+.navbar h3 a { color: inherit; padding: 0; }
+.navbar h3 a span { display: inline-block; padding: 8px 20px 12px; }
+.navbar h3 img { float: left; }
