--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -19,10 +19,12 @@ footer, #footer {
 ul.breadcrumb li.right { float: right; }
 ul.breadcrumb span.label { display: inline; }
 .modal form {margin: 0;}
-table.table-condensed th, table.table-condensed td {paddin	g: 6px 6px 5px; line-height: 15px;}
+table.table-condensed th, table.table-condensed td { padding: 6px 6px 5px; line-height: 15px; }
 table.table th { border-top: 0; border-bottom: 2px solid #ddd; }
 table.table tr:hover td { background-color: #e9e9F9 !important; }
 table.table tr.active td { background-color: #E9E9A9 !important; }
 .label_active { background-color: #46a546; }
 .label_inactive { background-color: #9d261d; }
 .label_failed { background-color: #9d261d; }
+dd code { border: 0; }
+pre.prettyprint { background: #313131; }
